--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -2,11 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient
-                android:startColor="@color/purple"
-                android:endColor="#8f94fb"
-                android:gradientRadius="180"
-                android:type="linear" />
+            <gradient android:endColor="#8f94fb" android:gradientRadius="180" android:startColor="@color/purple" android:type="linear" />
         </shape>
     </item>
 </selector>
