--- a/app/src/main/res/layout/activity_navigation_home.xml
+++ b/app/src/main/res/layout/activity_navigation_home.xml
@@ -30,8 +30,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/mobile_navigation"
-        >
-    </fragment>
+        app:navGraph="@navigation/mobile_navigation"></fragment>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
