--- a/app/src/main/res/layout/drowdown_item.xml
+++ b/app/src/main/res/layout/drowdown_item.xml
@@ -1,9 +1,8 @@
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/textView"
     android:layout_width="match_parent"
-    android:textColor="@color/black"
-    android:textStyle="bold"
-    android:padding="14dp"
     android:layout_height="wrap_content"
-    android:text="@string/app_name" />
+    android:padding="14dp"
+    android:text="@string/app_name"
+    android:textColor="@color/black"
+    android:textStyle="bold" />
