--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -65,18 +65,17 @@
         app:cardElevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView4" >
+        app:layout_constraintTop_toBottomOf="@+id/cardView4">
 
         <com.denzcoskun.imageslider.ImageSlider
             android:id="@+id/image_slider"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:iss_auto_cycle="true"
-            app:iss_period="1000"
-            app:iss_delay="0"/>
+            app:iss_delay="0"
+            app:iss_period="1000" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
 
 
     <TextView
@@ -102,9 +101,9 @@
 
         <ImageView
             android:id="@+id/iv_home_laptop"
-            android:src="@drawable/laptop"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="20dp"
+            android:src="@drawable/laptop"
 
             />
 
@@ -126,31 +125,35 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:src="@drawable/workstation" />
+
         <TextView
             android:id="@+id/tv_laptop"
             android:layout_row="1"
             android:layout_column="0"
-            android:text="@string/laptop"
             android:layout_gravity="center_horizontal"
-            android:layout_marginStart="16dp"/>
+            android:layout_marginStart="16dp"
+            android:text="@string/laptop" />
+
         <TextView
             android:id="@+id/tv_hp"
             android:layout_row="1"
             android:layout_column="1"
-            android:text="@string/handphone"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp"
+            android:text="@string/handphone" />
+
         <TextView
             android:id="@+id/tv_televisi"
             android:layout_row="1"
             android:layout_column="2"
-            android:text="@string/televisi"
-            android:layout_marginStart="22dp"/>
+            android:layout_marginStart="22dp"
+            android:text="@string/televisi" />
+
         <TextView
             android:id="@+id/tv_komputer"
             android:layout_row="1"
             android:layout_column="3"
-            android:text="@string/komputer"
-            android:layout_marginStart="26dp"/>
+            android:layout_marginStart="26dp"
+            android:text="@string/komputer" />
     </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
