--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.profile.ProfileFragment">
@@ -41,10 +41,10 @@
         android:id="@+id/tv_desc_nama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="58dp"
         android:layout_marginStart="16dp"
-        android:text="@string/nama"
+        android:layout_marginTop="58dp"
         android:fontFamily="@font/roboto_bold"
+        android:text="@string/nama"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
@@ -54,8 +54,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="@string/dindafristiani_gmail_com"
         android:fontFamily="@font/roboto_bold"
+        android:text="@string/dindafristiani_gmail_com"
         android:textColor="#B3B4B8"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
@@ -64,20 +64,20 @@
     <ImageView
         android:layout_width="37dp"
         android:layout_height="37dp"
-        android:layout_marginTop="72dp"
-        android:src="@drawable/edit"
         android:layout_marginStart="45dp"
+        android:layout_marginTop="72dp"
+        android:contentDescription="@string/mengedit_profil"
+        android:src="@drawable/edit"
         app:layout_constraintStart_toEndOf="@+id/tv_desc_email"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        android:contentDescription="@string/mengedit_profil" />
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView1"
         android:layout_width="300dp"
         android:layout_height="67dp"
         android:layout_marginTop="50dp"
-        app:cardCornerRadius="20dp"
         app:cardBackgroundColor="@color/purple"
+        app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_desc_email">
@@ -90,12 +90,12 @@
                 android:id="@+id/iv_money"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginTop="23dp"
                 android:layout_marginStart="25dp"
+                android:layout_marginTop="23dp"
+                android:contentDescription="@string/jumlah_saldo"
                 android:src="@drawable/cash1"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/jumlah_saldo" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_label_saldo"
@@ -104,21 +104,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
-                android:textSize="18sp"
                 android:fontFamily="@font/roboto_bold"
                 android:text="@string/saldo"
                 android:textColor="@color/white"
+                android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/iv_money"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:layout_marginEnd="30dp"
                 android:layout_marginTop="18dp"
+                android:layout_marginEnd="30dp"
                 android:src="@drawable/plus"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
@@ -128,8 +128,8 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
-        app:cardCornerRadius="20dp"
         app:cardBackgroundColor="#EEEEEE"
+        app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView1">
@@ -142,8 +142,8 @@
                 android:id="@+id/iv_akun"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:layout_marginTop="12dp"
                 android:layout_marginStart="25dp"
+                android:layout_marginTop="12dp"
                 android:src="@drawable/ic_account"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -154,20 +154,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
-                android:textSize="18sp"
                 android:fontFamily="@font/roboto_light"
                 android:text="@string/akun"
+                android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/iv_akun"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginEnd="30dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="30dp"
                 android:src="@drawable/ic_next"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
@@ -177,8 +177,8 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="26dp"
-        app:cardCornerRadius="20dp"
         app:cardBackgroundColor="#EEEEEE"
+        app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView2">
@@ -191,8 +191,8 @@
                 android:id="@+id/iv_pengaturan"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:layout_marginTop="12dp"
                 android:layout_marginStart="25dp"
+                android:layout_marginTop="12dp"
                 android:src="@drawable/ic_settings"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -203,9 +203,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
-                android:textSize="18sp"
                 android:fontFamily="@font/roboto_light"
                 android:text="@string/pengaturan"
+                android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/iv_pengaturan"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -213,11 +213,11 @@
                 android:id="@+id/next2"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginEnd="30dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="30dp"
                 android:src="@drawable/ic_next"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
@@ -227,8 +227,8 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="26dp"
-        app:cardCornerRadius="20dp"
         app:cardBackgroundColor="#EEEEEE"
+        app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView3">
@@ -241,8 +241,8 @@
                 android:id="@+id/iv_logout"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:layout_marginTop="12dp"
                 android:layout_marginStart="25dp"
+                android:layout_marginTop="12dp"
                 android:src="@drawable/logout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -253,20 +253,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
-                android:textSize="18sp"
                 android:fontFamily="@font/roboto_light"
                 android:text="@string/logout"
+                android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/iv_logout"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginEnd="30dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="30dp"
                 android:src="@drawable/ic_next"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
