--- a/app/src/main/res/layout/item_notif.xml
+++ b/app/src/main/res/layout/item_notif.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:paddingTop="20dp"
+        android:layout_height="80dp"
         android:paddingStart="10dp"
-        android:paddingEnd="20dp"
-        android:layout_height="80dp">
+        android:paddingTop="20dp"
+        android:paddingEnd="20dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/foto_profil"
@@ -25,21 +23,22 @@
             android:id="@+id/nama_teknisi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:fontFamily="@font/roboto_medium"
             android:text="@string/pembayaran_berhasil"
             android:textSize="12sp"
-            android:layout_marginStart="16dp"
             app:layout_constraintStart_toEndOf="@+id/foto_profil"
             app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/deskripsi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/roboto_medium"
             android:text="@string/tanggal_pembayaran_berhasil"
             android:textSize="11sp"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="16dp"
             app:layout_constraintStart_toEndOf="@+id/foto_profil"
             app:layout_constraintTop_toBottomOf="@id/nama_teknisi" />
 
